...
            IconButton(onClick = {
//                onToggleChecked
            }) {
                Icon(
//                    imageVector = if (item.isChecked) Icons.Default.Check else Icons.Default.Check,
                    imageVector = Icons.Default.Check,
                    contentDescription = "Check Item",
//                    tint = if (item.isChecked) MaterialTheme.colorScheme.primary else MaterialTheme.colorScheme.onSurface.copy(alpha = 0.3f)
                    tint = MaterialTheme.colorScheme.onSurface.copy(alpha = 0.3f)
                )
            } //TODO test ShoppingListRow

            Column(
...

                IconButton(onClick = {
                    onDelete(item)
                }) {
                    Icon(
                        imageVector = Icons.Default.Delete,
                        contentDescription = "Delete Item"
                    )
                }
            }
        }
    }
}
...
